fixed overlapping icon

--- a/src/sass/_citiesSection.scss
+++ b/src/sass/_citiesSection.scss
@@ -10,6 +10,7 @@
     transition: 0.5s ease-in-out;
     top: 0;
     right: 0;
+    z-index: 7;
 };
 
 .cities__forecast--active{
